## Process this file with automake to produce Makefile.in

EXTRA_DIST = CheckDIRSymbolExists.cmake \
    CheckPrototypeExists.cmake \
    CheckSTDC.cmake \
    cmake_uninstall.cmake.in \
    DefaultDirs.cmake \
    FindMidiShare.cmake \
    FindOSS.cmake \
    FindPthreads.cmake \
    FindReadline.cmake \
    report.cmake \
    TestInline.cmake \
    TestVLA.cmake \
    UnsetPkgConfig.cmake
